DG2: vulkancts tests spin forever
The following test spins indefinitely, since 9027c5df:
dEQP-VK.fragment_shading_rate.renderpass2.monolithic.multiview.dynamic.noattachmentptr.noshaderrate.replace.keep.151x431.samples16.vs
Many other tests have a similar performance regression.
Bisected to:
9027c5df4c51bcf529ab34b0ffbe763cf8fe8543
Author: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
anv: remove the LOCAL_MEM allocation bit
We always want to use local memory if possible, we'll just add the
system memory heap if the buffer needs to be host visible.
v2: Drop some usages of ANV_BO_ALLOC_LOCAL_MEM_CPU_VISIBLE
Signed-off-by: Lionel Landwerlin <lionel.g.landwerlin@intel.com>
Reviewed-by: Ivan Briano <ivan.briano@intel.com>
Part-of: <https://gitlab.freedesktop.org/mesa/mesa/-/merge_requests/17873>